--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -84,4 +84,7 @@
 
      <!-- QS tile title -->
     <string name="dirac_qs_tile_title">Dirac sound</string>
+
+    <!-- Dolby -->
+    <string name="dolby">Dolby Atmos™</string>
 </resources>
